feat: 删除api接口管理
