# ent/migrate/schema.go
@@ -40,32 +40,6 @@ var (
 		Columns:    AlbumPhotosColumns,
 		PrimaryKey: []*schema.Column{AlbumPhotosColumns[0]},
 	}
-	// APIPermsColumns holds the columns for the "api_perms" table.
-	APIPermsColumns = []*schema.Column{
-		{Name: "id", Type: field.TypeInt, Increment: true},
-		{Name: "created_at", Type: field.TypeTime},
-		{Name: "updated_at", Type: field.TypeTime},
-		{Name: "name", Type: field.TypeString},
-		{Name: "path", Type: field.TypeString},
-		{Name: "method", Type: field.TypeString},
-		{Name: "desc", Type: field.TypeString},
-		{Name: "permission_type", Type: field.TypeString, Default: "private"},
-		{Name: "roles", Type: field.TypeJSON},
-		{Name: "status", Type: field.TypeString, Default: "active"},
-	}
-	// APIPermsTable holds the schema information for the "api_perms" table.
-	APIPermsTable = &schema.Table{
-		Name:       "api_perms",
-		Columns:    APIPermsColumns,
-		PrimaryKey: []*schema.Column{APIPermsColumns[0]},
-		Indexes: []*schema.Index{
-			{
-				Name:    "apiperms_path_method",
-				Unique:  true,
-				Columns: []*schema.Column{APIPermsColumns[4], APIPermsColumns[5]},
-			},
-		},
-	}
 	// CategoriesColumns holds the columns for the "categories" table.
 	CategoriesColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeInt, Increment: true},
@@ -873,7 +847,6 @@ var (
 	Tables = []*schema.Table{
 		AlbumsTable,
 		AlbumPhotosTable,
-		APIPermsTable,
 		CategoriesTable,
 		CommentsTable,
 		CouponsTable,
